compiler/testData/diagnostics/tests/jvm/duplicateJvmSignature/specialNames/classInitializer.kt
// RUN_PIPELINE_TILL: BACKEND
class A {
    <!DUPLICATE_CLASS_NAMES!>class B<!>
    init {
        <!DUPLICATE_CLASS_NAMES!>class B<!>
    }
}

/* GENERATED_FIR_TAGS: classDeclaration, init, localClass, nestedClass */
